--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/chicoxyzzy/eslint-plugin-no-js"
+  },
   "keywords": [
     "eslint",
     "eslintplugin",
